--- a/styles/index.scss
+++ b/styles/index.scss
@@ -13,11 +13,10 @@ body {
 
 #showdown_animation {
   margin:0 auto;
-}
-
-#showdown_animation canvas{
-  width:100%;
-  max-width:500px;
+  canvas{
+    width:100%;
+    max-width:500px;
+  }
 }
 
 #wheel{
@@ -36,10 +35,6 @@ body {
   max-width:300px;
 }
 
-.rotate-center {
-	-webkit-animation: rotate-center 0.6s ease-in-out both;
-	        animation: rotate-center 0.6s ease-in-out both;
-}
 
 #button {
   max-width:100%;
@@ -58,6 +53,7 @@ body {
 
 #button img {
   max-width:100%;
+  color:green;
 }
 
 #button[disabled] {
@@ -69,6 +65,13 @@ body {
   color:#ff1133;
   text-align:center;
   width: 100%;
+}
+
+//this class is used in javascript
+//if modyfied make sure you modify the name in config js
+.rotate-center {
+	-webkit-animation: rotate-center 10s ease-in-out both;
+	        animation: rotate-center 10s ease-in-out both;
 }
 
 @-webkit-keyframes rotate-center {
